--- a/src/pages/videos/overview/index.mdx
+++ b/src/pages/videos/overview/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Overview
 ---
-import ActivationPage from 'gatsby-theme-carbon/src/templates/ActivationPage';
+import VideoTile from 'gatsby-theme-carbon/src/templates/VideoTile';
 
 
 <p>
@@ -9,8 +9,7 @@ IBM Cloud Overview
 </p>
 <br></br>
 
-<ActivationPage content="cndp">
-</ActivationPage>
+
 
 
 
